added model Unet_Aug_HSV

--- a/latex/Template.tex
+++ b/latex/Template.tex
@@ -220,7 +220,7 @@ Dice coefficient is used as loss function and is provided in Equation \eqref{equ
     Unet segmentation (Approach 1) & $0.7871$ \\\hline
     Unet patch (Approach 2) & $0.8281$ \\\hline
     Unet increased epoch (Approach 3) & $0.7858$ \\\hline
-    Unet hsv (Approach 4) & $0.8398$ \\\hline
+    Unet hsv (Approach 4) & $0.8247$ \\\hline
     \end{tabular}
     }
 \end{table}
@@ -261,7 +261,7 @@ Dice coefficient is used as loss function and is provided in Equation \eqref{equ
     Unet segmentation (Approach 1) & $0.7871$ \\\hline
     Unet patch (Approach 2) & $0.8281$ \\\hline
     Unet increased epoch (Approach 3) & $0.7858$ \\\hline
-    Unet hsv (Approach 4) & $0.8398$ \\\hline
+    Unet hsv (Approach 4) & $0.8247$ \\\hline
     Unet hed (Approach 5) & $0.8398$ \\\hline
     \end{tabular}
     }
@@ -305,7 +305,7 @@ Multidimensional Dice coefficient is used as loss function and is provided in Fi
     Unet segmentation (Approach 1) & $0.7871$ \\\hline
     Unet patch (Approach 2) & $0.8281$ \\\hline
     Unet increased epoch (Approach 3) & $0.7858$ \\\hline
-    Unet hsv (Approach 4) & $0.8398$ \\\hline
+    Unet hsv (Approach 4) & $0.8247$ \\\hline
     Unet hed (Approach 5) & $0.8398$ \\\hline
     Unet multi-class segmentation (Approach 6) & $0.5514$ \\\hline
     \end{tabular}
@@ -344,7 +344,7 @@ Multidimensional Dice coefficient is used as loss function and is provided in Fi
     Unet segmentation (Approach 1) & $0.7871$ \\\hline
     Unet patch (Approach 2) & $0.8281$ \\\hline
     Unet increased epoch (Approach 3) & $0.7858$ \\\hline
-    Unet hsv (Approach 4) & $0.8398$ \\\hline
+    Unet hsv (Approach 4) & $0.8247$ \\\hline
     Unet hed (Approach 5) & $0.8398$ \\\hline
     Unet multi-class segmentation (Approach 6) & $0.5514$ \\\hline
     Unet multi-class HSV (Approach 7) & $0.7146$ \\\hline
@@ -384,7 +384,7 @@ Multidimensional Dice coefficient is used as loss function and is provided in Fi
     Unet segmentation (Approach 1) & $0.7871$ \\\hline
     Unet patch (Approach 2) & $0.8281$ \\\hline
     Unet increased epoch (Approach 3) & $0.7858$ \\\hline
-    Unet hsv (Approach 4) & $0.8398$ \\\hline
+    Unet hsv (Approach 4) & $0.8247$ \\\hline
     Unet hed (Approach 5) & $0.8398$ \\\hline
     Unet multi-class segmentation (Approach 6) & $0.5514$ \\\hline
     Unet multi-class HSV (Approach 7) & $0.7146$ \\\hline
@@ -392,6 +392,20 @@ Multidimensional Dice coefficient is used as loss function and is provided in Fi
     \end{tabular}
     }
 \end{table}
+
+\subsection{reference}
+dataset : https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/OCYCMP
+Epithelium segmentation using deep learning in H&E-stained prostate specimens with immunohistochemistry as reference standard: https://www.nature.com/articles/s41598-018-37257-4
+Otsu’s Thresholding with OpenCV: https://learnopencv.com/otsu-thresholding-with-opencv/
+Quantifying the effects of data augmentation and stain color normalization in convolutional neural networks for computational pathology: https://arxiv.org/pdf/1902.06543.pdf
+Whole-Slide Mitosis Detection in H&E Breast Histology Using PHH3 as a Reference to Train Distilled Stain-Invariant Convolutional Networks: https://www.researchgate.net/publication/324073594_Whole-Slide_Mitosis_Detection_in_HE_Breast_Histology_Using_PHH3_as_a_Reference_to_Train_Distilled_Stain-Invariant_Convolutional_Networks
+Spectral Analysis of CNN for Tomato Disease Identification: https://www.researchgate.net/publication/318134312_Spectral_Analysis_of_CNN_for_Tomato_Disease_Identification
+A review of artifacts in histopathology: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6097380/
+A Machine Learning Engineer’s Tutorial to Transfer Learning for Multi-class Image Segmentation Using U-net : https://towardsdatascience.com/a-machine-learning-engineers-tutorial-to-transfer-learning-for-multi-class-image-segmentation-b34818caec6b 
+Encoder-Decoder with Atrous Separable Convolution for Semantic Image Segmentation: https://arxiv.org/pdf/1802.02611v3.pdf
+DeepLab-v3-plus Semantic Segmentation in TensorFlow: https://github.com/rishizek/tensorflow-deeplab-v3-plus
+Xception: Implementing from scratch using Tensorflow: https://towardsdatascience.com/xception-from-scratch-using-tensorflow-even-better-than-inception-940fb231ced9
+UNET Segmentation with Pretrained MobileNetV2 as Encoder: https://idiotdeveloper.com/unet-segmentation-with-pretrained-mobilenetv2-as-encoder/
 
 \section{Conclusions and future work}
 Summarize your report and reiterate key points. Why do you think that some algorithms worked better than others? For future work, if you had more time, more team members, or more computational resources, what would you explore?
